syntax = "proto3";

// 密钥对数据格式
message Keypair {
  string account = 1;
  string seed = 2;
  string secret_key = 3;
  string public_key = 4;
  string type = 5;
  string cert = 6;
}

// 密钥对list数据格式
message KeyPairList {
  repeated Keypair keypair_list = 1;
}

// 数据库对应字段
message Keystore{
  string account = 1; // 账户
  string encrypt_code = 2; // 加密码，用户给/随机生成，用来加密公钥和seed
  string public_encrypt_type = 3; // 公钥+种子 加密类型
  string secret_encrypt_type = 4; // 私钥 加密类型
  string public_key = 5;
  string secret_key = 6;
  string cert = 7;
  string create_date = 8;
}

// 签名结构体
message Sign{
  string message = 1; //需签名的数据
  string type = 2; //签名类型
}

// 解锁/上锁
message OptionLock{
  string account = 1;
  string encrypt_code = 2; // 解锁/上锁码
}

// 统一请求格式
message Request{
  oneof data{
    string account = 1;
    OptionLock option_lock = 2;
    Sign sign = 3;
  }
}

// 统一返回格式
message Response{
  oneof data {
    Keypair keypair = 2;
    Keystore keystore = 3;
    KeyPairList keypair_list = 4;
    uint32 code = 5;
  }
}
